# UAP_Sandbox

./: .gitignore  README.md  agents.py  dispatcher.py  dockdesk_test.py  live_test.py  protocol.py  pyproject.toml  quick_test.py  reflector_prompt.txt  requirements-oauth.txt  requirements.txt  run.py  test_mcp_agents.py  uap-global.bat  uap.bat
.github/workflows/: publish.yml
act_storage/: 1d77df2f.json  2cc2275e.json  abba2ef5.json
docs/: OAUTH.md
src/uap/: __init__.py  cli.py  cli_ui.py  config.py  dashboard.py  dispatcher.py  launcher.py  local_models.py  mcp_server.py  oauth.py  protocol.py  reflector_prompt.txt  registry.py  telemetry.py  uap_cli.py  uap_theme.py  vault.py  visuals.py
src/uap/agents/: __init__.py
src/uap/core/: agent_protocol.py  config.py  protocol.py  telemetry.py  vault.py
src/uap/dashboard/: __init__.py  app.py  oauth_app.py
src/uap/dashboard/components/: chat_interface.py  handoff_trace.py  state_packet_viewer.py
src/uap/dashboard/config/: settings.py
src/uap/dashboard/models/: state_packet.py
src/uap/dashboard/utils/: __init__.py  packet_handler.py
src/uap/providers/: __init__.py  base.py  implementations.py  registry.py
tests/: test_core.py  test_dockdesk.py  test_live.py  test_unit.py
uap-segment-dashboard/: README.md  requirements.txt
uap-segment-dashboard/.streamlit/: config.toml
uap-segment-dashboard/config/: settings.py
uap-segment-dashboard/src/: oauth_app.py  streamlit_app.py
uap-segment-dashboard/src/components/: chat_interface.py  state_packet_viewer.py
uap-segment-dashboard/src/models/: state_packet.py
uap-segment-dashboard/src/utils/: __init__.py  packet_handler.py
