[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uap-protocol"
version = "0.2.0"
description = "Universal Agent Protocol - Connect AI agents, share state, run tasks from your terminal"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "UAP Contributors"}
]
keywords = ["ai", "agents", "llm", "protocol", "automation", "groq", "ollama", "gemini", "claude"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    # Core
    "click>=8.0.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "pyyaml>=6.0",
    "pydantic>=2.0.0",
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    # LLM backends
    "groq>=0.4.0",
    "google-generativeai>=0.3.0",
    # Google OAuth (for identity)
    "google-auth>=2.0.0",
    "google-auth-oauthlib>=1.0.0",
    "google-api-python-client>=2.0.0",
]

[project.optional-dependencies]
dashboard = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
]
all = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "plotly>=5.18.0",
    "anthropic>=0.18.0",
    "openai>=1.12.0",
]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=24.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
uap = "uap.cli:app"
uap-cli = "uap.uap_cli:main"
uap-dashboard = "uap.dashboard:main"
uap-run = "uap.launcher:main"

[project.urls]
Homepage = "https://github.com/uap-protocol/uap"
Documentation = "https://github.com/uap-protocol/uap#readme"
Repository = "https://github.com/uap-protocol/uap"

[tool.hatch.build.targets.wheel]
packages = ["src/uap"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/README.md",
    "/requirements.txt",
]
